--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.transfergo.currencyconverter">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -15,11 +16,11 @@
         <activity
             android:name=".feature.converter.MainActivity"
             android:exported="true"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.CurrencyConverter.NoActionBar">
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.CurrencyConverter.NoActionBar"
+            tools:ignore="LockedOrientationActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
